# cg

./: CMakeLists.txt  README.md  assembly.cpp  assembly.h  bit_sequence.h  bug_message.h  global_data.cpp  handler.cpp  handler.h  init.cpp  machine_code.cpp  machine_code.h  main.cpp  num_magic.cpp  num_magic.h  opcode.h  operation_code.cpp  operation_code.h  token.cpp  token.h  translator.cpp  translator.h
input/: in_new.txt  in_nosyn.txt  in_old.txt  input.txt  simple_assembly.txt
output/: out.txt  out_new.txt  out_simple_assembly.txt
